// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APD activities list container renders correctly when data is loaded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivitiesList
    activities={
      Array [
        Object {
          "name": "activity 1",
        },
        Object {
          "name": "activity 2",
        },
      ]
    }
    apd={
      Object {
        "loaded": true,
      }
    }
    fetchApdDataIfNeeded={[Function]}
    goTo={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Activities
        </h1>,
        <UNDEFINED>
          <div
            className="mb3"
          >
            <div
              className="py1 relative border-bottom border-silver"
            >
              <div
                className="absolute right-0"
              >
                <Link
                  replace={false}
                  to="/activity-overview/activity 1"
                >
                  Start
                </Link>
              </div>
              activity 1
            </div>
            <div
              className="py1 relative border-bottom border-silver"
            >
              <div
                className="absolute right-0"
              >
                <Link
                  replace={false}
                  to="/activity-overview/activity 2"
                >
                  Start
                </Link>
              </div>
              activity 2
            </div>
          </div>
          <button
            className="btn btn-outline blue mr1"
            onClick={[Function]}
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary"
            type="button"
          >
            Add another activity
          </button>
        </UNDEFINED>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Activities",
        },
        "ref": null,
        "rendered": "Activities",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <div
              className="mb3"
            >
              <div
                className="py1 relative border-bottom border-silver"
              >
                <div
                  className="absolute right-0"
                >
                  <Link
                    replace={false}
                    to="/activity-overview/activity 1"
                  >
                    Start
                  </Link>
                </div>
                activity 1
              </div>
              <div
                className="py1 relative border-bottom border-silver"
              >
                <div
                  className="absolute right-0"
                >
                  <Link
                    replace={false}
                    to="/activity-overview/activity 2"
                  >
                    Start
                  </Link>
                </div>
                activity 2
              </div>
            </div>,
            <button
              className="btn btn-outline blue mr1"
              onClick={[Function]}
              type="button"
            >
              Back
            </button>,
            <button
              className="btn btn-primary"
              type="button"
            >
              Add another activity
            </button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="py1 relative border-bottom border-silver"
                >
                  <div
                    className="absolute right-0"
                  >
                    <Link
                      replace={false}
                      to="/activity-overview/activity 1"
                    >
                      Start
                    </Link>
                  </div>
                  activity 1
                </div>,
                <div
                  className="py1 relative border-bottom border-silver"
                >
                  <div
                    className="absolute right-0"
                  >
                    <Link
                      replace={false}
                      to="/activity-overview/activity 2"
                    >
                      Start
                    </Link>
                  </div>
                  activity 2
                </div>,
              ],
              "className": "mb3",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "activity 1",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="absolute right-0"
                    >
                      <Link
                        replace={false}
                        to="/activity-overview/activity 1"
                      >
                        Start
                      </Link>
                    </div>,
                    "activity 1",
                  ],
                  "className": "py1 relative border-bottom border-silver",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        replace={false}
                        to="/activity-overview/activity 1"
                      >
                        Start
                      </Link>,
                      "className": "absolute right-0",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "Start",
                        "replace": false,
                        "to": "/activity-overview/activity 1",
                      },
                      "ref": null,
                      "rendered": "Start",
                      "type": [Function],
                    },
                    "type": "div",
                  },
                  "activity 1",
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": "activity 2",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="absolute right-0"
                    >
                      <Link
                        replace={false}
                        to="/activity-overview/activity 2"
                      >
                        Start
                      </Link>
                    </div>,
                    "activity 2",
                  ],
                  "className": "py1 relative border-bottom border-silver",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        replace={false}
                        to="/activity-overview/activity 2"
                      >
                        Start
                      </Link>,
                      "className": "absolute right-0",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "Start",
                        "replace": false,
                        "to": "/activity-overview/activity 2",
                      },
                      "ref": null,
                      "rendered": "Start",
                      "type": [Function],
                    },
                    "type": "div",
                  },
                  "activity 2",
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Back",
              "className": "btn btn-outline blue mr1",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": "Back",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Add another activity",
              "className": "btn btn-primary",
              "type": "button",
            },
            "ref": null,
            "rendered": "Add another activity",
            "type": "button",
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Activities
          </h1>,
          <UNDEFINED>
            <div
              className="mb3"
            >
              <div
                className="py1 relative border-bottom border-silver"
              >
                <div
                  className="absolute right-0"
                >
                  <Link
                    replace={false}
                    to="/activity-overview/activity 1"
                  >
                    Start
                  </Link>
                </div>
                activity 1
              </div>
              <div
                className="py1 relative border-bottom border-silver"
              >
                <div
                  className="absolute right-0"
                >
                  <Link
                    replace={false}
                    to="/activity-overview/activity 2"
                  >
                    Start
                  </Link>
                </div>
                activity 2
              </div>
            </div>
            <button
              className="btn btn-outline blue mr1"
              onClick={[Function]}
              type="button"
            >
              Back
            </button>
            <button
              className="btn btn-primary"
              type="button"
            >
              Add another activity
            </button>
          </UNDEFINED>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Activities",
          },
          "ref": null,
          "rendered": "Activities",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <div
                className="mb3"
              >
                <div
                  className="py1 relative border-bottom border-silver"
                >
                  <div
                    className="absolute right-0"
                  >
                    <Link
                      replace={false}
                      to="/activity-overview/activity 1"
                    >
                      Start
                    </Link>
                  </div>
                  activity 1
                </div>
                <div
                  className="py1 relative border-bottom border-silver"
                >
                  <div
                    className="absolute right-0"
                  >
                    <Link
                      replace={false}
                      to="/activity-overview/activity 2"
                    >
                      Start
                    </Link>
                  </div>
                  activity 2
                </div>
              </div>,
              <button
                className="btn btn-outline blue mr1"
                onClick={[Function]}
                type="button"
              >
                Back
              </button>,
              <button
                className="btn btn-primary"
                type="button"
              >
                Add another activity
              </button>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="py1 relative border-bottom border-silver"
                  >
                    <div
                      className="absolute right-0"
                    >
                      <Link
                        replace={false}
                        to="/activity-overview/activity 1"
                      >
                        Start
                      </Link>
                    </div>
                    activity 1
                  </div>,
                  <div
                    className="py1 relative border-bottom border-silver"
                  >
                    <div
                      className="absolute right-0"
                    >
                      <Link
                        replace={false}
                        to="/activity-overview/activity 2"
                      >
                        Start
                      </Link>
                    </div>
                    activity 2
                  </div>,
                ],
                "className": "mb3",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "activity 1",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="absolute right-0"
                      >
                        <Link
                          replace={false}
                          to="/activity-overview/activity 1"
                        >
                          Start
                        </Link>
                      </div>,
                      "activity 1",
                    ],
                    "className": "py1 relative border-bottom border-silver",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          replace={false}
                          to="/activity-overview/activity 1"
                        >
                          Start
                        </Link>,
                        "className": "absolute right-0",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "Start",
                          "replace": false,
                          "to": "/activity-overview/activity 1",
                        },
                        "ref": null,
                        "rendered": "Start",
                        "type": [Function],
                      },
                      "type": "div",
                    },
                    "activity 1",
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": "activity 2",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="absolute right-0"
                      >
                        <Link
                          replace={false}
                          to="/activity-overview/activity 2"
                        >
                          Start
                        </Link>
                      </div>,
                      "activity 2",
                    ],
                    "className": "py1 relative border-bottom border-silver",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          replace={false}
                          to="/activity-overview/activity 2"
                        >
                          Start
                        </Link>,
                        "className": "absolute right-0",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "Start",
                          "replace": false,
                          "to": "/activity-overview/activity 2",
                        },
                        "ref": null,
                        "rendered": "Start",
                        "type": [Function],
                      },
                      "type": "div",
                    },
                    "activity 2",
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Back",
                "className": "btn btn-outline blue mr1",
                "onClick": [Function],
                "type": "button",
              },
              "ref": null,
              "rendered": "Back",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Add another activity",
                "className": "btn btn-primary",
                "type": "button",
              },
              "ref": null,
              "rendered": "Add another activity",
              "type": "button",
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`APD activities list container renders correctly when data is not loaded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivitiesList
    activities={
      Array [
        Object {
          "name": "activity 1",
        },
        Object {
          "name": "activity 2",
        },
      ]
    }
    apd={
      Object {
        "loaded": false,
      }
    }
    fetchApdDataIfNeeded={[Function]}
    goTo={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Activities
        </h1>,
        <p>
          Loading...
        </p>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Activities",
        },
        "ref": null,
        "rendered": "Activities",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Loading...",
        },
        "ref": null,
        "rendered": "Loading...",
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Activities
          </h1>,
          <p>
            Loading...
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Activities",
          },
          "ref": null,
          "rendered": "Activities",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Loading...",
          },
          "ref": null,
          "rendered": "Loading...",
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
